# personal-claude-assistant

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  orchestrator.py  pyproject.toml  telegram_bot.py
.claude/: settings.local.json
.claude/skills/code-help/: SKILL.md
.claude/skills/news/: SKILL.md
.claude/skills/reminders/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/summarize/: SKILL.md
.claude/skills/telegram-bot/: SKILL.md
.claude/skills/weather/: SKILL.md
.claude/skills/web-search/: SKILL.md
agents/: __init__.py  code_agent.py  research_agent.py
skills/: __init__.py  code_executor.py  news.py  reminders.py  summarizer.py  weather.py  web_search.py
